--- a/src/app/products/components/all-products/all-products.component.html
+++ b/src/app/products/components/all-products/all-products.component.html
@@ -1,3 +1,32 @@
+<div class="card flex flex-wrap gap-3 justify-content-center">
+  <p-button label="Primary"></p-button>
+  <p-button label="Secondary" styleClass="p-button-secondary"></p-button>
+  <p-button label="Success" styleClass="p-button-success"></p-button>
+  <p-button label="Info" styleClass="p-button-info"></p-button>
+  <p-button label="Warning" styleClass="p-button-warning"></p-button>
+  <p-button label="Help" styleClass="p-button-help"></p-button>
+  <p-button label="Danger" styleClass="p-button-danger"></p-button>
+</div>
+<div class="card flex flex-column md:flex-row gap-3 pt-5">
+  <div class="p-inputgroup">
+    <span class="p-inputgroup-addon">
+      <i class="pi pi-user"></i>
+    </span>
+    <input pInputText placeholder="Username" />
+  </div>
+
+  <div class="p-inputgroup">
+    <span class="p-inputgroup-addon">$</span>
+    <input type="text" pInputText placeholder="Price" />
+    <span class="p-inputgroup-addon">.00</span>
+  </div>
+
+  <div class="p-inputgroup">
+    <span class="p-inputgroup-addon">www</span>
+    <input type="text" pInputText placeholder="Website" />
+  </div>
+</div>
+
 <div class="search pt-5 w-50">
   <input
     type="text"
@@ -6,6 +35,7 @@
     [formControl]="searchInput"
   />
 </div>
+<button class="btn btn-danger" (click)="clearInput()">Clear</button>
 
 <div class="row pt-5">
   <div class="col-lg-4" *ngFor="let product of filteredProducts">
